--- a/Website/wwwroot/css/TreeEditor.css
+++ b/Website/wwwroot/css/TreeEditor.css
@@ -1,13 +1,27 @@
-﻿#nodes-menu {
+﻿#page-content-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+#nodes-menu {
     height: 100%;
     width: 15rem;
 }
 
-#main {
-    width: 100%;
-    height: 100%;
-    padding: 15px 150px 150px 15px;
+#main-container {
+    position: relative;
     overflow: scroll;
+    display: flex;
+    flex: 1;
+}
+
+#main {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 15px;
 }
 
 .template{
@@ -88,4 +102,9 @@
     width: 100%;
     word-wrap: break-word;
     white-space: normal;
+}
+
+.hovered {
+    border-color: lightsteelblue;
+    background-color: aliceblue;
 }
