зачем-то добавил интервал до списывания денег  на страницу "подробно"

--- a/Website/Views/BotForSalesSettings/PriceDetails.cshtml
+++ b/Website/Views/BotForSalesSettings/PriceDetails.cshtml
@@ -20,7 +20,8 @@
     <br><br>
     Кол-во заказов за последние 7 дней = @ViewData["number_of_orders_over_the_past_week"]
 
-
+    <br />
+    Деньги будут списаны через @ViewData["time before withdrawing money"]
 
 
 
