Немного разукрасил div'ы.

--- a/Website/Views/BotForSalesEditing/SalesTreeEditor.cshtml
+++ b/Website/Views/BotForSalesEditing/SalesTreeEditor.cshtml
@@ -8,6 +8,7 @@
 <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.5.0/css/bootstrap4-toggle.min.css" rel="stylesheet" />
 <link href="@Url.Content("~/lib/open-iconic/font/css/open-iconic-bootstrap.css")" rel="stylesheet" />
 <link href="~/css/TreeEditor.css" rel="stylesheet" />
+<script src="~/lib/jqueryui/jquery-ui.min.js"></script>
 <script src="~/js/CoreTreeEditor.js"></script>
 <script src="~/js/SalesNodes.js"></script>
 
@@ -21,9 +22,7 @@
         </li>
     </ul>
     <div class="tab-content" id="left-content">
-        <div class="tab-pane fade show active" id="nodes-menu" role="tabpanel" aria-labelledby="nodes-tab">
-
-        </div>
+        <div class="tab-pane fade show active" id="nodes-menu" role="tabpanel" aria-labelledby="nodes-tab"></div>
     </div>
 </div>
 
