--- a/Website/wwwroot/css/TreeEditor.css
+++ b/Website/wwwroot/css/TreeEditor.css
@@ -43,7 +43,7 @@
     width: 200px;
     border: 2px dashed navy;
     background-color: lavender;
-    border-radius: 10px 10px;
+    border-radius: 10px;
     float: left;
 }
 
@@ -102,13 +102,39 @@
 
 .nodeName {
     margin: auto;
-    max-width: 100%;
+    float: left;
+    width: 70%;
     max-height: 100%;
     color: azure;
     font-size: x-large;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow: hidden;
     text-overflow: ellipsis;
+    word-break: break-word;
+}
+
+.buttonsDiv {
+    float: right;
+    width: 25%;
+    height: 100%;
+    margin-left: 5%;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding: 2.5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.nodeButton {
+    margin: 2.5px auto;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    line-height: 40px;
+    border-width: 1px;
+    border-style: solid;
 }
 
 .hovered {
