--- a/Website/Views/BotCreation/BotTypeSelection.cshtml
+++ b/Website/Views/BotCreation/BotTypeSelection.cshtml
@@ -1,58 +1,54 @@
 ﻿@{
     Layout = "_LayoutHome";
 }
-<div  style="padding:5px;">
+<div style="padding:5px;">
 
-    <div class="card-deck">
-
-
-        <div class="card col-4" style="width: 18rem;">
-            <img class="card-img-top" src="@Url.Content("~/images/shoppingCart.png")" alt="Card image cap">
+    <div class="card-group">
+        <div class="card">
+            <img src="@Url.Content("~/images/shoppingCart.png")" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Бот для продаж</h5>
                 <a class="btn btn-success btn-lg btn-block" asp-controller="BotCreation" asp-action="BotForSalesTokenEntry">Создать</a>
                 <a class="btn btn-outline-success btn-lg btn-block" asp-controller="" asp-action="">Смотреть примеры</a>
                 <hr />
                 <p class="card-text"> С помощью такого можно создать небольшой каталог с товарами. Пользователь может добавить товары в корзину, а после ввести свои данные и отправить заказ. Заказ тут же станет виден во вкладке "Заказы" (неожиданно)</p>
-
             </div>
+
         </div>
-
-        @*<div class="card border-secondary " style="width: 18rem;visibility:hidden;">
-            <img class="card-img-top" src="@Url.Content("~/images/feedback.png")" alt="Card image cap">
+        <div class="card" style="visibility:hidden;">
+            <img src="@Url.Content("~/images/shoppingCart.png")" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Feedback</h5>
-                <a class="btn btn-success btn-lg btn-block" >Создать</a>
-                <a class="btn btn-outline-success btn-lg btn-block" >Смотреть примеры</a>
+                <h5 class="card-title">Бот для продаж</h5>
+                <a class="btn btn-success btn-lg btn-block" asp-controller="BotCreation" asp-action="BotForSalesTokenEntry">Создать</a>
+                <a class="btn btn-outline-success btn-lg btn-block" asp-controller="" asp-action="">Смотреть примеры</a>
                 <hr />
-                <p class="card-text">Бот, которого можно использовать для предложки или сбора обратной связи, опросов в коллективе.</p>
-
+                <p class="card-text"> С помощью такого можно создать небольшой каталог с товарами. Пользователь может добавить товары в корзину, а после ввести свои данные и отправить заказ. Заказ тут же станет виден во вкладке "Заказы" (неожиданно)</p>
             </div>
+
+        </div> <div class="card" style="visibility:hidden;">
+            <img src="@Url.Content("~/images/shoppingCart.png")" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Бот для продаж</h5>
+                <a class="btn btn-success btn-lg btn-block" asp-controller="BotCreation" asp-action="BotForSalesTokenEntry">Создать</a>
+                <a class="btn btn-outline-success btn-lg btn-block" asp-controller="" asp-action="">Смотреть примеры</a>
+                <hr />
+                <p class="card-text"> С помощью такого можно создать небольшой каталог с товарами. Пользователь может добавить товары в корзину, а после ввести свои данные и отправить заказ. Заказ тут же станет виден во вкладке "Заказы" (неожиданно)</p>
+            </div>
+
         </div>
-
-        <div class="card" style="width: 18rem; visibility:hidden;">
-            <img class="card-img-top" src="@Url.Content("~/images/igor.png")" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Бот для каталога файлов</h5>
-                <a class="btn btn-success btn-lg btn-block">Создать</a>
-                <a class="btn btn-outline-success btn-lg btn-block" >Смотреть примеры</a>
-                <hr />
-                <p class="card-text">Бот, которого можно использовать для удобного доступа к любым файлам. Наконец-то песни Егора Крида всегда будут с вами.</p>
-
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;visibility:hidden;">
-            <img class="card-img-top" src="@Url.Content("~/images/igor.png")" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Бот для каталога файлов</h5>
-                <a class="btn btn-success btn-lg btn-block">Создать</a>
-                <a class="btn btn-outline-success btn-lg btn-block" >Смотреть примеры</a>
-                <hr />
-                <p class="card-text">Бот, которого можно использовать для удобного доступа к любым файлам. Наконец-то песни Егора Крида всегда будут с вами.</p>
-
-            </div>
-        </div>*@
-
     </div>
 </div>
+
+
+@*<div class="card">
+    <img class="card-img-top" src="@Url.Content("~/images/shoppingCart.png")" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">Бот для продаж</h5>
+        <a class="btn btn-success btn-lg btn-block" asp-controller="BotCreation" asp-action="BotForSalesTokenEntry">Создать</a>
+        <a class="btn btn-outline-success btn-lg btn-block" asp-controller="" asp-action="">Смотреть примеры</a>
+        <hr />
+        <p class="card-text"> С помощью такого можно создать небольшой каталог с товарами. Пользователь может добавить товары в корзину, а после ввести свои данные и отправить заказ. Заказ тут же станет виден во вкладке "Заказы" (неожиданно)</p>
+
+    </div>
+</div>*@
+
