--- a/Website/Views/Home/MyBots.cshtml
+++ b/Website/Views/Home/MyBots.cshtml
@@ -2,7 +2,7 @@
     Layout = "_LayoutHome";
 }
 @*<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">*@
-<table class="table table-striped">
+<table class="table table-striped" style="max-width:100%;">
     <thead>
         <tr>
             <th scope="col">#</th>
