показ кол-ва сообщений

--- a/Website/Views/Support/Index.cshtml
+++ b/Website/Views/Support/Index.cshtml
@@ -2,7 +2,9 @@
     Layout = "_LayoutHome";   
 }
 
-<h1 class="display-4">По вопросам вопросов: офф почта</h1>
+<div class="container">
+    <h4 class="text-body">По вопросам вопросов: botsconstructor@gmail.com</h4>
+</div>
 
 
 
