Добавлена поддержка больших изображений в заказах (теперь они правильно отображаются при нажатии).

--- a/Website/Views/BotForSalesEditing/SalesTreeEditor.cshtml
+++ b/Website/Views/BotForSalesEditing/SalesTreeEditor.cshtml
@@ -9,6 +9,7 @@
 <link href="@Url.Content("~/lib/open-iconic/font/css/open-iconic-bootstrap.css")" rel="stylesheet" />
 <link href="~/css/TreeEditor.css" rel="stylesheet" />
 <script src="~/lib/jqueryui/jquery-ui.min.js"></script>
+<script src="~/js/FileManager.js"></script>
 <script src="~/js/CoreTreeEditor.js"></script>
 <script src="~/js/SalesNodes.js"></script>
 
