Теперь изображение сохраняет пропорции.

--- a/Website/wwwroot/css/TreeEditor.css
+++ b/Website/wwwroot/css/TreeEditor.css
@@ -165,6 +165,10 @@
     padding-bottom: 100%;
 }
 
+.fileHolder > img {
+    object-fit: contain;
+}
+
 .bg1 {
     background-color: firebrick;
 }
