--- a/Website/Views/Home/MyBots.cshtml
+++ b/Website/Views/Home/MyBots.cshtml
@@ -20,7 +20,7 @@
 
 
 
-                    <td><a href="https://telegram.me/@bot.Name">@@@bot.Name</a> </td>
+                    <td><a href="https://telegram.me/@bot.Name"   target="_blank" >@@@bot.Name</a> </td>
                     <td>@bot.Status</td>
                     <td>
                         <a asp-controller="BotForSalesSettings" asp-action="Settings" asp-route-botId="@bot.BotId" class="btn btn-info">Настройки</a>
